# trivia_project

./: .gitignore  README.md  factories.py  pyproject.toml  pytest.ini  requirements.txt  trivia_api_consume.py
trivia/: asgi.py  settings.py  urls.py  wsgi.py
trivia_app/: forms.py  models.py  views.py
trivia_app/templates/: question_detail.html  question_list.html
trivia_app/tests/: test_question_list.py
